--- a/Frontend Project/TodoListProject/index.html
+++ b/Frontend Project/TodoListProject/index.html
@@ -6,10 +6,20 @@
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
-    <script type="text/javascript" src="assets/js/lib/jquery-3.1.1.slim.min.js"></script> 
+    <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.min.js"></script> 
 </head>
 <body>
+
+<div id= "container">
+    <h1>To-Do List</h1>
+    <input type="text"> 
+    <ul>
+        <li><span>X</span> Hello1</li>
+        <li><span>X</span> Hello2</li>
+        <li><span>X</span> Hello3</li>
+    </ul>   
+</div>
     
-    <script type="text/javascript" src="assets/js/todos.js"></script>
+<script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
 </html>
